# vercel-wasm

./: .gitignore  .vercelignore  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
api/: index.ts
wasm/: Cargo.toml  Wasm.mk
wasm/src/: lib.rs
