[package]
name = "movies-leptos"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.70"
js-sys = "0.3.61"
leptos = { version = "0.2.5",default-features = false, features = ["ssr"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
wasm-bindgen = { version = "0.2.84", features = ["serde", "serde_json"] }

log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1.7"
web-sys = "0.3"
